# UAO-Neumonia-modulo1

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  detector_neumonia.py  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
app/: cli.py  gui.py  requirements.txt
model/: .gitignore
src/: __init__.py  explain.py  inference.py  io_imgs.py  model.py  preprocess.py
tests/: test_inference_smoke.py  test_preprocess.py
